--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -154,3 +154,21 @@
   booktitle={日本オペレーションズ・リサーチ学会 2017年春季研究発表会, 沖縄県市町村自治会館, 2017年3月15日--17日},
   year={2017},
 }
+@inproceedings{maehara2017optimal,
+  author={前原 貴憲 and 河瀬 康志 and 澄田 範奈* and 東野 克哉 and 河原林 健一},
+  title={劣モジュラ評価関数をもつ最適価格付け問題},
+  booktitle={日本オペレーションズ・リサーチ学会 2017年春季研究発表会, 沖縄県市町村自治会館, 2017年3月15日--17日},
+  year={2017},
+}
+@inproceedings{fukunaga2017steiner,
+  author={福永 拓郎* and 前原 貴憲},
+  title={頂点被覆重み最小化シュタイナー木問題},
+  booktitle={日本オペレーションズ・リサーチ学会 2017年春季研究発表会, 沖縄県市町村自治会館, 2017年3月15日--17日},
+  year={2017},
+}
+@inproceedings{imaizumi2017nonsmooth,
+  author={今泉 允聡* and 前原 貴憲},
+  title={非滑らかな確率密度関数の推定},
+  booktitle={日本統計学会 11回春季大会, 政策研究大学院大学, 2017年3月5日},
+  year={2017},
+}
