--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -1,7 +1,7 @@
 @inproceedings{maehara2019query,
   author={前原 貴憲 and 山口 勇太郎*},
   title={クエリ可能な確率的組合せ最適化},
-  boobltitle={test},
+  booktitle={test},
   year={2019},
 }
 @inproceedings{soh2019spider,
