--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -1,4 +1,4 @@
-@inproceedings{maehara2019query,
+@inproceedings{maehara2019query2,
   author={前原 貴憲 and 山口 勇太郎*},
   title={クエリ可能な確率的組合せ最適化1},
   booktitle={test},
