--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -1,7 +1,7 @@
 @inproceedings{maehara2019query2,
+  title={クエリ可能な確率的組合せ最適化1},
   author={前原 貴憲 and 山口 勇太郎* },
-  title={a},
-  booktitle={b},
+  booktitle={第18回情報科学技術フォーラム (FIT 2019), 岡山大学, 岡山県岡山市, 2019年9月},
   year={2019},
 }
 @inproceedings{soh2019spider,
