--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -1,5 +1,5 @@
 @inproceedings{maehara2019query2,
-  title={クエリ可能な確率的組合せ最適化1},
+  title={クエリ可能な確率的組合せ最適化},
   author={前原 貴憲 and 山口 勇太郎* },
   booktitle={第18回情報科学技術フォーラム (FIT 2019), 岡山大学, 岡山県岡山市, 2019年9月},
   year={2019},
