--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -39,6 +39,17 @@
   year={2019},
   url={https://doi.org/10.1007/978-3-030-26176-4_9},
 }
+@article{wilmet2019outlier,
+  title={Outlier detection in IP traffic modelled as a link stream using the stability of degree distributions over time},
+  author={Wilmet, Audrey and Viard, Tiphaine and Latapy, Matthieu and Lamarche-Perrin, Robin},
+  journal={Computer Networks},
+  volume={161},
+  pages={197--209},
+  year={2019},
+  month={July 3},
+  publisher={Elsevier},
+  url={https://doi.org/10.1016/j.comnet.2019.07.002},
+}
 @inproceedings{ishihata2019exact,
   title={Exact Bernoulli Scan Statistics using Binary Decision Diagrams},
   author={Ishihata, Masakazu and Maehara, Takanori},
@@ -73,7 +84,8 @@
   journal={Mathematical Programming, Series A},
   pages={1--34},
   year={2019},
-  month={March 15},
+  
+  ={March 15},
   url={https://doi.org/10.1007/s10107-019-01388-x},
 }
 @article{viard2019augmenting,
