--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -35,9 +35,10 @@
 @inproceedings{chen2019chance,
   author={Junjie Chen and Takanori Maehara},
   title={Chance-Constrained Submodular Knapsack Problem},
-  booktitle={Proceedings of the 25th International Computing and Combinatorics Conference (COCOON 2019), Xian, China, July 29 - 31, 2019},
+  booktitle={Proceedings of the 25th International Computing and Combinatorics Conference (COCOON'19), Xian, China, July 29 - 31, 2019},
   year={2019},
-  url={https://doi.org/10.1007/978-3-030-26176-4_9},
+  pages={103-114},
+  url={https://doi.org/10.1007/978-3-030-26176-4_9}
 }
 @article{wilmet2019outlier,
   title={Outlier detection in IP traffic modelled as a link stream using the stability of degree distributions over time},
