--- a/maehara.bib
+++ b/maehara.bib
@@ -9,7 +9,7 @@
   author={Satoshi Hara and Takanori Maehara},
   booktitle={Proceedings of the 16th Pacific Rim International Conference on Artificial Intelligence (PRICAI'19), anuca Island, Cuvu, Fiji, August 26-30, 2019},
   year={2019},
-  pages={350-363},
+  pages={350--363},
   url = {https://doi.org/10.1007/978-3-030-29911-8_27},
 }
 @inproceedings{chen2019chance,
@@ -17,7 +17,7 @@
   title={Chance-Constrained Submodular Knapsack Problem},
   booktitle={Proceedings of the 25th International Computing and Combinatorics Conference (COCOON'19), Xian, China, July 29 - 31, 2019},
   year={2019},
-  pages={103-114},
+  pages={103--114},
   url={https://doi.org/10.1007/978-3-030-26176-4_9}
 }
 @inproceedings{ishihata2019exact,
@@ -25,7 +25,7 @@
   author={Ishihata, Masakazu and Maehara, Takanori},
   booktitle = {Proceedings of the 28th International Joint Conference on Artificial Intelligence (IJCAI'19), Macau, China, August 10-16, 2018},
   year = {2019},
-  pages = {5737-5743},
+  pages = {5737--5743},
   url={https://doi.org/10.24963/ijcai.2019/795},
 }
 @article{fukunaga2019computing,
@@ -33,6 +33,8 @@
   author={Fukunaga, Takuro and Maehara, Takanori},
   journal={Theoretical Computer Science},
   year={2019},
+  month={October 29},
+  pages={48--61},
   url = {https://doi.org/10.1016/j.tcs.2019.05.018},
 }
 @article{maehara2019stochastic,
@@ -51,20 +53,20 @@
   year={2019}
 }
 @inproceedings{chugg2019submodular,
- author = {Ben Chugg and Takanori Maehara},
- title = {Submodular Stochastic Probing with Prices},
- booktitle = {Proceedings of the 6th International Conference on Control, Decision and Information Technologies (CoDIT'19), Paris, France, April 23-25, 2019},
- year = {2019},
- url = {http://arxiv.org/abs/1810.01730},
- eprint = {1810.01730},
+  author = {Ben Chugg and Takanori Maehara},
+  title = {Submodular Stochastic Probing with Prices},
+  booktitle = {Proceedings of the 6th International Conference on Control, Decision and Information Technologies (CoDIT'19), Paris, France, April 23-25, 2019},
+  year = {2019},
+  pages={60--66},
+  url = {https://doi.org/10.1109/CoDIT.2019.8820312},
 }
 @inproceedings{kumabe2019linear,
- author = {Soh Kumabe and Takanori Maehara and Ryoma Sin'ya},
- title = {Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
- booktitle = {Proceedings of the 13th International Conference and Workshops on Algorithms and Computation (WALCOM'19), Guwahati, India, February 27 - March 2, 2019},
- pages = {248--260},
- year = {2019},
- url = {https://doi.org/10.1007/978-3-030-10564-8\_20},
+  author = {Soh Kumabe and Takanori Maehara and Ryoma Sin'ya},
+  title = {Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
+  booktitle = {Proceedings of the 13th International Conference and Workshops on Algorithms and Computation (WALCOM'19), Guwahati, India, February 27 - March 2, 2019},
+  pages = {248--260},
+  year = {2019},
+  url = {https://doi.org/10.1007/978-3-030-10564-8\_20},
 }
 @inproceedings{nakashima2019subspace,
   author = {So Nakashima and Takanori Maehara}, 
