--- a/maehara.bib
+++ b/maehara.bib
@@ -1,7 +1,13 @@
+@inproceedings{fukuchi2020faking,
+  author={Kazuto Fukuchi, Satoshi Hara and Takanori Maehara},
+  title={Faking Fairness via Stealthily Biased Sampling},
+  booktitle={Proceedings of the 34th AAAI Conference on Artificial Intelligence (AAAI'20), Special Track on AI for Social Impact, New York, New York, USA, February 7 - 12, 2020},
+  year={2020},
+}
 @inproceedings{hara2019data,
   author={Satoshi Hara and Atsushi Nitanda and Takanori Maehara},
   title={Data Cleansing for Models Trained with SGD},
-  booktitle = {Proceedings of the 33rd Annual Conference on Neural Information Processing Systems (NeurIPS'19), December 8 - 14, 2019, Vancouver, Canada},
+  booktitle = {Proceedings of the 33rd Annual Conference on Neural Information Processing Systems (NeurIPS'19), Vancouver, Canada, December 8 - 14, 2019},
   year = {2019},
 }
 @inproceedings{hara2019convex,
@@ -71,7 +77,8 @@
 @inproceedings{nakashima2019subspace,
   author = {So Nakashima and Takanori Maehara}, 
   title = {Subspace Selection via DR-Submodular Maximization on Lattices},
-  booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, USA, January 27 - February 1, 2019},
+  booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, 
+, January 27 - February 1, 2019},
   year = {2019},
   pages = {4618-4625},
   url = {https://doi.org/10.1609/aaai.v33i01.33014618},
