--- a/maehara.bib
+++ b/maehara.bib
@@ -1,5 +1,5 @@
 @inproceedings{fukuchi2020faking,
-  author={Kazuto Fukuchi, Satoshi Hara and Takanori Maehara},
+  author={Kazuto Fukuchi and Satoshi Hara and Takanori Maehara},
   title={Faking Fairness via Stealthily Biased Sampling},
   booktitle={Proceedings of the 34th AAAI Conference on Artificial Intelligence (AAAI'20), Special Track on AI for Social Impact, New York, New York, USA, February 7 - 12, 2020},
   year={2020},
