--- a/maehara.bib
+++ b/maehara.bib
@@ -3,12 +3,14 @@
   title={Faking Fairness via Stealthily Biased Sampling},
   booktitle={Proceedings of the 34th AAAI Conference on Artificial Intelligence (AAAI'20), Special Track on AI for Social Impact, New York, New York, USA, February 7 - 12, 2020},
   year={2020},
+  pages={to appear},
 }
 @inproceedings{hara2019data,
   author={Satoshi Hara and Atsushi Nitanda and Takanori Maehara},
   title={Data Cleansing for Models Trained with SGD},
   booktitle = {Proceedings of the 33rd Annual Conference on Neural Information Processing Systems (NeurIPS'19), Vancouver, Canada, December 8 - 14, 2019},
   year = {2019},
+  pages = {4215--4224},
 }
 @inproceedings{hara2019convex,
   title={Convex Hull Approximation of Nearly Optimal Lasso Solutions},
