--- a/maehara.bib
+++ b/maehara.bib
@@ -1,7 +1,8 @@
-@inproceedings{fukuchi2020faking,
-  author={Kazuto Fukuchi and Satoshi Hara and Takanori Maehara},
-  title={Faking Fairness via Stealthily Biased Sampling},
-  booktitle={Proceedings of the 34th AAAI Conference on Artificial Intelligence (AAAI'20), Special Track on AI for Social Impact, New York, New York, USA, February 7 - 12, 2020},
+@inproceedings{kumabe2020convexity,
+  author={Soh Kumabe and Takanori Maehara},
+  title={Convexity of Hypergraph Matching Game},
+  booktitle={Proceedings of the 19th International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS'20), Auckland, New Zealand, May 9 - 13, 2020}, 
+  34th AAAI Conference on Artificial Intelligence (AAAI'20), Special Track on AI for Social Impact, New York, New York, USA, February 7 - 12, 2020},
   year={2020},
   pages={to appear},
 }
