--- a/maehara.bib
+++ b/maehara.bib
@@ -5,6 +5,12 @@
   year={2020},
   pages={to appear},
 }
+@inproceedings{fukuchi2020faking
+  title={Faking Fairness via Stealthily Biased Sampling},
+  booktitle={Proceedings of the 34th AAAI Conference on Artificial Intelligence (AAAI'20), Special Track on AI for Social Impact, New York, New York, USA, February 7 - 12, 2020},
+  year={2020},
+  pages={to appear},
+}
 @inproceedings{hara2019data,
   author={Satoshi Hara and Atsushi Nitanda and Takanori Maehara},
   title={Data Cleansing for Models Trained with SGD},
