--- a/maehara.bib
+++ b/maehara.bib
@@ -7,6 +7,7 @@
 }
 @inproceedings{fukuchi2020faking,
   title={Faking Fairness via Stealthily Biased Sampling},
+  author={Kazuto Fukuchi and Satoshi Hara and Takanori Maehara},
   booktitle={Proceedings of the 34th AAAI Conference on Artificial Intelligence (AAAI'20), Special Track on AI for Social Impact, New York, New York, USA, February 7 - 12, 2020},
   year={2020},
   pages={to appear},
