--- a/maehara.bib
+++ b/maehara.bib
@@ -86,8 +86,7 @@
 @inproceedings{nakashima2019subspace,
   author = {So Nakashima and Takanori Maehara}, 
   title = {Subspace Selection via DR-Submodular Maximization on Lattices},
-  booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, 
-, January 27 - February 1, 2019},
+  booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, January 27 - February 1, 2019},
   year = {2019},
   pages = {4618-4625},
   url = {https://doi.org/10.1609/aaai.v33i01.33014618},
@@ -95,7 +94,7 @@
 @inproceedings{maehara2019group,
   author = {Takanori Maehara and Yuma Inoue},
   title = {Group Decision Diagram ({GDD}): A Compact Representation for Permutations}, 
-  booktitle = {in Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27--February 1, 2019},
+  booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27--February 1, 2019},
   year = {2019},
   pages = {2986-2994},
   url = {https://doi.org/10.1609/aaai.v33i01.33012986},
