--- a/maehara.bib
+++ b/maehara.bib
@@ -1,3 +1,10 @@
+@inproceedings{sasaki2020weighted,
+  author={Yoichi Sasaki and Takanori Maehara and Takumi Akazaki and Kazeto Yamamoto and Kunihiko Sadamasa},
+  title={Solving Weighted Abduction via Max-SAT Solvers},
+  booktitle={Proceedings of the 33rd International FLAIRS Conference (FLAIRS'20)},
+  pages={to appear},
+  year={2020},
+}  
 @inproceedings{kumabe2020convexity,
   author={Soh Kumabe and Takanori Maehara},
   title={Convexity of Hypergraph Matching Game},
