--- a/maehara.bib
+++ b/maehara.bib
@@ -212,7 +212,7 @@
 @inproceedings{maehara2017optimal,
  author = {Takanori Maehara and Yasushi Kawase and Hanna Sumita and Katsuya Tono and Ken{-}ichi Kawarabayashi},
  title = {Optimal Pricing for Submodular Valuations with Bounded Curvature},
- booktitle = {Proceedings of the 31st AAAI Conference on Artificial Intelligence, February 4-9, 2017, San Francisco, California, USA.},
+ booktitle = {Proceedings of the 31st AAAI Conference on Artificial Intelligence (AAAI'17), February 4-9, 2017, San Francisco, California, USA.},
  pages = {622--628},
  year = {2017},
  url = {http://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14562},
@@ -220,7 +220,7 @@
 @inproceedings{hara2017enumerate,
  author = {Satoshi Hara and Takanori Maehara},
  title = {Enumerate Lasso Solutions for Feature Selection},
- booktitle = {Proceedings of the 31st AAAI Conference on Artificial Intelligence, February 4-9, 2017, San Francisco, California, USA.},
+ booktitle = {Proceedings of the 31st AAAI Conference on Artificial Intelligence (AAAI'17), February 4-9, 2017, San Francisco, California, USA.},
  pages = {1985--1991},
  year = {2017},
  url = {http://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14304},
