--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -1,3 +1,31 @@
+@inproceedings{sasaki2020weighted,
+  author={Yoichi Sasaki and Takanori Maehara and Takumi Akazaki and Kazeto Yamamoto and Kunihiko Sadamasa},
+  title={Solving Weighted Abduction via Max-SAT Solvers},
+  booktitle={Proceedings of the 33rd International FLAIRS Conference (FLAIRS'20), North Miami Beach, Florida, United States, May 17 - 20, 2020},
+  pages={to appear},
+  year={2020},
+}  
+@inproceedings{kumabe2020convexity,
+  author={Soh Kumabe and Takanori Maehara},
+  title={Convexity of Hypergraph Matching Game},
+  booktitle={Proceedings of the 19th International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS'20), Auckland, New Zealand, May 9 - 13, 2020}, 
+  year={2020},
+  pages={to appear},
+}
+@inproceedings{fukuchi2020faking,
+  title={Faking Fairness via Stealthily Biased Sampling},
+  author={Kazuto Fukuchi and Satoshi Hara and Takanori Maehara},
+  booktitle={Proceedings of the 34th AAAI Conference on Artificial Intelligence (AAAI'20), Special Track on AI for Social Impact, New York, New York, USA, February 7 - 12, 2020},
+  year={2020},
+  pages={to appear},
+}
+@inproceedings{yamaguchi2020strongly,
+  author={Yutaro Yamaguchi},
+  title={A Strongly Polynomial Algorithm for Finding a Shortest Non-zero Path in Group-Labeled Graphs},
+  booktitle={Proceedings of the 31st Annual ACM-SIAM Symposium on Discrete Algorithms (SODA'20), Salt Lake City, Utah, United States, January 5-8, 2020},
+  year={2020},
+  pages={to appear},
+}
 @article{baffier2020decycling, 
   author={Jean-Fran\c{c}ois Baffier, Benjamin Renoust},
   title={Decycling Information Networks},
