--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -29,7 +29,8 @@
 @article{baffier2020decycling, 
   author={Jean-Fran\c{c}ois Baffier, Benjamin Renoust},
   title={Decycling Information Networks},
-  journal={Applied Network Science Special Issue on Global Flow of Commodity, Money, Human, and Knowledge}
+  journal={Applied Network Science Special Issue on Global Flow of Commodity, Money, Human, and Knowledge},
+  year={2020},
 }
 @inproceedings{ito2019improved,
   author={Shinji Ito and Daisuke Hatano and Hanna Sumita and Kei Takemura and Takuro Fukunaga and Naonori Kakimura and {Ken-ichi} Kawarabayashi},
