--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -31,6 +31,7 @@
   title={Decycling Information Networks},
   journal={Applied Network Science Special Issue on Global Flow of Commodity, Money, Human, and Knowledge},
   year={2020},
+  pages={to appear},
 }
 @inproceedings{ito2019improved,
   author={Shinji Ito and Daisuke Hatano and Hanna Sumita and Kei Takemura and Takuro Fukunaga and Naonori Kakimura and {Ken-ichi} Kawarabayashi},
