--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -121,8 +121,7 @@
   journal={Mathematical Programming, Series A},
   pages={1--34},
   year={2019},
-  
-  ={March 15},
+  month={March 15},
   url={https://doi.org/10.1007/s10107-019-01388-x},
 }
 @article{viard2019augmenting,
