--- a/maehara.bib
+++ b/maehara.bib
@@ -438,7 +438,7 @@
 }
 @article{funada2005ellipsoidal,
   title={Ellipsoidal model of the rise of a Taylor bubble in a round tube},
-  author={Funada, T and Joseph, DD and Maehara, T and Yamashita, S},
+  author={Toshio Funada and Daniel D Joseph and Takanori Maehara and Susumu Yamashita},
   journal={International journal of multiphase flow},
   volume={31},
   number={4},
