--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -1,23 +1,47 @@
+@inproceedings{hoang2020graph,
+  author={Hoang Nguyen, Takanori Maehara},
+  title={Graph Homomorphism Convolution},
+  booktitle={Proceedings of the 37th International Conference on Machine Learning (ICML'20)},
+  year={2020},
+  pages={to appear},
+}
+@inproceedings{coutino2020state,
+  author={Mario Coutino, Elvin Isufi, Takanori Maehara, Geert Leus},
+  title={State-Space Based Network Topology Identification},
+  booktitle={Proceedings of the 28th European Signal Processing Conference (EUSIPCO'20)},
+  year={2020},
+  pages={to appear},
+}
+@inproceedings{kumabe2020convexity2,
+  author={Soh Kumabe and Takanori Maehara},
+  title={Convexity of b-Matching Game},
+  booktitle={Proceedings of the 29th International Joint Conference on Artificial Intelligence and the 17th Pacific Rim International Conference on Artificial Intelligence (IJCAI-PRICAL'20)}, 
+  year={2020},
+  pages={to appear},
+}
 @inproceedings{sasaki2020weighted,
   author={Yoichi Sasaki and Takanori Maehara and Takumi Akazaki and Kazeto Yamamoto and Kunihiko Sadamasa},
   title={Solving Weighted Abduction via Max-SAT Solvers},
-  booktitle={Proceedings of the 33rd International FLAIRS Conference (FLAIRS'20), North Miami Beach, Florida, United States, May 17 - 20, 2020},
-  pages={to appear},
+  booktitle={Proceedings of the 33rd International FLAIRS Conference (FLAIRS'20)},
+  pages={142--147},
   year={2020},
+  url={https://www.aaai.org/ocs/index.php/FLAIRS/FLAIRS20/paper/view/18420}
 }  
 @inproceedings{kumabe2020convexity,
   author={Soh Kumabe and Takanori Maehara},
   title={Convexity of Hypergraph Matching Game},
-  booktitle={Proceedings of the 19th International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS'20), Auckland, New Zealand, May 9 - 13, 2020}, 
+  booktitle={Proceedings of the 19th International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS'20), Online, May 9-13, 2020}, 
   year={2020},
-  pages={to appear},
+  pages={663--671},
+  url={http://www.ifaamas.org/Proceedings/aamas2020/pdfs/p663.pdf}
 }
 @inproceedings{fukuchi2020faking,
   title={Faking Fairness via Stealthily Biased Sampling},
   author={Kazuto Fukuchi and Satoshi Hara and Takanori Maehara},
-  booktitle={Proceedings of the 34th AAAI Conference on Artificial Intelligence (AAAI'20), Special Track on AI for Social Impact, New York, New York, USA, February 7 - 12, 2020},
+  booktitle={Proceedings of the 34th AAAI Conference on Artificial Intelligence (AAAI'20), Special Track on AI for Social Impact, New York, New York, USA, February 7-12, 2020},
   year={2020},
   pages={to appear},
+  url={https://www.aaai.org/Papers/AAAI/2020GB/AISI-FukuchiK.221.pdf}
 }
 @inproceedings{yamaguchi2020strongly,
   author={Yutaro Yamaguchi},
